# factor-analysis-exercise-service

./: .eslintignore  .firebaserc  .gitignore  .prettierignore  Dockerfile  Dockerfile.production.dockerfile  README.md  firebase.json  function.js  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  server.js  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: code-style.yml  data-parser-release.yml  main.yml  pages.yml  preview.yml  system-tests-and-deploy.yml  vercel-production.yml
.husky/: lint-staged.config.js
.test-data/: user-input.json
.test-data/mini-test/: factor-weights.csv
data-parser/: .gitignore  README.md  main.py  pyproject.toml
data-parser/workflows/: poetry-action.yml
docs/: usermanual.md
src/components/: BreedList.tsx  ButtonEditor.tsx  CsvReader.tsx  Editor.tsx  Exercise.tsx  ExerciseItemHeader.tsx  FactorialSurveyEditor.tsx  LabelEditor.tsx  ListInputEditor.tsx  MarkdownEditor.tsx  MatrixEditor.tsx  QuestionEditor.tsx  Renderer.tsx  Submission.tsx  Survey.tsx  SurveyEditor.tsx  SurveyQuestion.tsx
src/data/: breeds_fin.json  test-spec.json
src/pages/: _app.tsx  iframe.tsx
src/shared-module/: bindings.guard.ts  bindings.ts  exercise-service-protocol-types.guard.ts  exercise-service-protocol-types.ts
src/util/: cors.ts  dataframe.ts  factor-calc.ts  migrate.ts  stateInterfaces.ts  utils.ts
system-tests/: example.spec.ts  package-lock.json  package.json  playwright.config.ts
tests-examples/: demo-todo-app.spec.ts
tests/api/: grade.test.ts  (+1 more)
types/: react-i18next.d.ts  utils.d.ts
(+112 files in other folders)
