[tool.poetry]
name = "dog_converter"
version = "0.1.0"
description = ""
authors = ["Anastasia Diseth <annadiseth@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.17.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
